--- a/pipeline/variables.sample.yml
+++ b/pipeline/variables.sample.yml
@@ -10,9 +10,9 @@ config_git_branch: main
 #+ SSH key pair to fetch the config Git repository.
 config_git_ssh_key: ((ssh_config.ssh_key))
 
-#. dockerfile (required): ((dockerfile))
-#+ Dockfile from the stack to use to build the Docker image.
-dockerfile: ((dockerfile))
+#. resource (required): arm
+#+ Resource name to embbed in the resource Docker image.
+resource: ((resource))
 
 #. docker-hub-email (required): ((docker-hub-email))
 #+ Docker Hub email to use to publish the Docker image.
