--- a/resources/arm/Dockerfile
+++ b/resources/arm/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch
+FROM debian:jessie
 
 RUN apt-get update && apt-get install -y \
     apt-utils \
@@ -30,7 +30,7 @@ RUN apt-get update && apt-get install -y \
     runit \
     xz-utils
 
-RUN echo "deb http://emdebian.org/tools/debian stretch main" > /etc/apt/sources.list.d/emdebian.list
+RUN echo "deb http://emdebian.org/tools/debian jessie main" > /etc/apt/sources.list.d/emdebian.list
 RUN curl http://emdebian.org/tools/debian/emdebian-toolchain-archive.key | apt-key add -
 RUN dpkg --add-architecture armel
 RUN apt-get update && apt-get install -y crossbuild-essential-armel
