--- a/resources/arm/Dockerfile
+++ b/resources/arm/Dockerfile
@@ -30,8 +30,8 @@ RUN apt-get update && apt-get install -y \
     runit \
     xz-utils
 
-RUN echo "deb http://emdebian.org/tools/debian jessie main" > /etc/apt/sources.list.d/emdebian.list
-RUN curl http://emdebian.org/tools/debian/emdebian-toolchain-archive.key | apt-key add -
+#RUN echo "deb http://emdebian.org/tools/debian jessie main" > /etc/apt/sources.list.d/emdebian.list
+#RUN curl http://emdebian.org/tools/debian/emdebian-toolchain-archive.key | apt-key add -
 RUN dpkg --add-architecture armel
 RUN apt-get update
 RUN apt-get install -y libc6-dev:armel gcc-arm-linux-gnueabi g++-arm-linux-gnueabi
